@@ -4807,3 +4807,5 @@ Changelog for GXemul:
 20181108	Implementing host X11 mouse input for the pckbc device.
 20181112	More work on the O2 rendering engine Raster Ops. Moving windows
 		within NetBSD's X11 now looks as it should.
+20181115	Changing the PCI product ID for the AIC7880 SCSI controller in
+		the SGI O2 emulation mode to match my real O2 (0x9004, 0x8078).
